vistas inicio y shop listas

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dkfa8olux/image/upload/v1712093251/funkoshop_img/funkos_logos/Group_ttcf5t.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Funkoshop</title>
   </head>
